@@ -29,6 +29,7 @@ InstructionSig operandSignature(Opcode opc)
         {Opcode::IMOV, InstructionSig::RI},
         {Opcode::NCONST, InstructionSig::RI},
         {Opcode::NNEG, InstructionSig::RR},
+        {Opcode::NNOT, InstructionSig::RR},
         {Opcode::NADD, InstructionSig::RRR},
         {Opcode::NSUB, InstructionSig::RRR},
         {Opcode::NMUL, InstructionSig::RRR},
@@ -134,6 +135,7 @@ const char* mnemonic(Opcode opc)
         {Opcode::IMOV, "IMOV"},
         {Opcode::NCONST, "NCONST"},
         {Opcode::NNEG, "NNEG"},
+        {Opcode::NNOT, "NNOT"},
         {Opcode::NADD, "NADD"},
         {Opcode::NSUB, "NSUB"},
         {Opcode::NMUL, "NMUL"},
@@ -239,6 +241,7 @@ FlowType resultType(Opcode opc)
         {Opcode::IMOV, FlowType::Number},
         {Opcode::NCONST, FlowType::Number},
         {Opcode::NNEG, FlowType::Number},
+        {Opcode::NNOT, FlowType::Number},
         {Opcode::NADD, FlowType::Number},
         {Opcode::NSUB, FlowType::Number},
         {Opcode::NMUL, FlowType::Number},
